Refining data processing in process

--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -22,20 +22,22 @@
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "DUD_VALUE= 0 # change from 0 to something like 123 for debugging\n",
-    "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
-    "INPUT_ROWS_LIMIT= TOTAL_ROWS\n",
+    "EMPTY_DATA_DAY_VAL= 123456789\n",
+    "TOTAL_ROWS= 9999999999\n",
+    "INPUT_ROWS_LIMIT= TOTAL_ROWS # 500000\n",
     "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
     "MAX_STATION_ID= 117\n",
     "SECS_IN_5MIN= 300\n",
     "DATAPOINT_EVERYX_MIN= 5\n",
     "DATAPOINTS_PER_DAY= 288\n",
     "DAYS_OF_WEEK= ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'] # yes, I consider Monday to be the '0'/start of the week\n",
-    "STARTING_DAY= 0 # aka Monday. Because the 27th of Jan 2020 is a Monday\n",
-    "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1]\n",
+    "STARTING_DATE= 0 # aka Monday. Because the 27th of Jan 2020 is a Monday\n",
+    "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1, 0]\n",
+    "SUBSTANDARD_DAYS= [50, 49]\n",
     "TOTAL_DAYS= 66 # from 27 / 1 / 2020 to (and including) 1 / 4 / 2020\n",
     "HOURS= 24\n",
     "EPOCH= datetime.datetime(2020, 1, 27, 0, 0)\n",
-    "MAX_TIME= int((datetime.datetime(2020,4,2,0,0) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
+    "TOTAL_TIME_DATAPOINTS= int((datetime.datetime(2020,4,2,0,0) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
     "K= 5\n",
     "STEP_SIZE= 0.02185 # just the magic number that leads to 288 values being generated\n",
     "R= 0.5\n",
@@ -44,22 +46,24 @@
     "class DataDay: # ideally this would be nested in the Station class\n",
     "    def __init__(self, index):\n",
     "        self.index= index\n",
+    "        self.substandard_day= False\n",
+    "        if index in SUBSTANDARD_DAYS:\n",
+    "            self.substandard_day= True\n",
     "        self.times_populated= 0\n",
-    "        self.day_of_week= DUD_VALUE\n",
-    "        self.day_since_epoch= DUD_VALUE\n",
-    "        self.day_of_week= ((STARTING_DAY + index - 1) % len(DAYS_OF_WEEK))\n",
+    "        self.day_of_week= ((STARTING_DATE + index) % len(DAYS_OF_WEEK))\n",
     "        \n",
-    "        self.daily_epoch_time= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.int)\n",
-    "        self.epoch_time= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.int)\n",
-    "        self.bikes= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.int)\n",
-    "        self.percent_bikes= np.full(DATAPOINTS_PER_DAY, DUD_VALUE, dtype=np.float)\n",
+    "        self.daily_epoch_time= np.full(DATAPOINTS_PER_DAY, EMPTY_DATA_DAY_VAL, dtype=np.int)\n",
+    "        self.epoch_time= np.full(DATAPOINTS_PER_DAY, EMPTY_DATA_DAY_VAL, dtype=np.int)\n",
+    "        self.bikes= np.full(DATAPOINTS_PER_DAY, EMPTY_DATA_DAY_VAL, dtype=np.int)\n",
+    "        self.percent_bikes= np.full(DATAPOINTS_PER_DAY, float(EMPTY_DATA_DAY_VAL), dtype=np.float)\n",
     "\n",
     "    def populate(self, daily_epoch_time, epoch_time, bikes, percent_bikes):\n",
-    "        self.daily_epoch_time[daily_epoch_time]= daily_epoch_time\n",
-    "        self.epoch_time[daily_epoch_time]= epoch_time\n",
-    "        self.bikes[daily_epoch_time]= bikes\n",
-    "        self.percent_bikes[daily_epoch_time]= percent_bikes\n",
-    "        self.times_populated+= 1\n",
+    "        if self.substandard_day == False:\n",
+    "            self.daily_epoch_time[daily_epoch_time]= daily_epoch_time\n",
+    "            self.epoch_time[daily_epoch_time]= epoch_time\n",
+    "            self.bikes[daily_epoch_time]= bikes\n",
+    "            self.percent_bikes[daily_epoch_time]= percent_bikes\n",
+    "            self.times_populated+= 1\n",
     "\n",
     "class Station:\n",
     "    def __init__(self, index):\n",
@@ -69,7 +73,7 @@
     "        self.address= DUD_VALUE\n",
     "        self.latitude= DUD_VALUE\n",
     "        self.longitude= DUD_VALUE\n",
-    "        self.data_days= [DataDay(i) for i in range(1, TOTAL_DAYS + 2)] # + 1 because 0 is excluded and + 1 because we want to include the last day, not have it as the rim\n",
+    "        self.data_days= [DataDay(i) for i in range(0, TOTAL_DAYS)]\n",
     "    \n",
     "    def populate_consts(self, name, bike_capacity, address, latitude, longitude):\n",
     "        self.name= name\n",
@@ -98,7 +102,7 @@
     "\n",
     "total_capacity= 0 # not in use currently\n",
     "index= []; daily_epoch_time= []; epoch_time= []; percent_bikes= [];\n",
-    "stations= [Station(i) for i in range(1, MAX_STATION_ID + 1)] # note: MAX_STATION_ID + 1 is not included in the range\n",
+    "stations= [Station(i) for i in range(0, MAX_STATION_ID + 1)] # + 1 so as to include MAX_STATION_ID in the range. Even though there is no station 0 or 1, I include them so that station indices are also array indices\n",
     "indices_to_populate= list(range(1, MAX_STATION_ID + 1))\n",
     "for index in MISSING_STATIONS:\n",
     "    indices_to_populate.remove(index)\n",
@@ -109,11 +113,11 @@
     "    try:\n",
     "        while len(indices_to_populate) != 0:\n",
     "            row= next(reader)\n",
-    "            if int(row[0]) == current_index: # this 'if' is just for performance\n",
+    "            if int(row[0]) == current_index: # this clause is just for performance\n",
     "                continue\n",
     "            current_index= int(row[0])\n",
     "            if current_index in indices_to_populate:\n",
-    "                stations[current_index - 2].populate_consts(row[3], row[4], row[8], row[9], row[10])\n",
+    "                stations[current_index].populate_consts(row[3], row[4], row[8], row[9], row[10])\n",
     "                indices_to_populate.remove(current_index)\n",
     "                total_capacity+= int(row[4])\n",
     "        \n",
@@ -126,16 +130,36 @@
     "                continue\n",
     "            try:\n",
     "                epoch_time= int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - EPOCH).total_seconds() / SECS_IN_5MIN)\n",
-    "                stations[int(row[0]) - 1].data_days[int(epoch_time / (DATAPOINTS_PER_DAY - 1))].populate( \\\n",
-    "                    int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), 0, 0)).total_seconds() / (SECS_IN_5MIN + 1)), \\\n",
+    "                stations[int(row[0])].data_days[int(epoch_time / DATAPOINTS_PER_DAY)].populate( \\\n",
+    "                    int((datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), int(row[1][11: 13]), int(row[1][14: 16])) - datetime.datetime(int(row[1][0:4]), int(row[1][5:7]), int(row[1][8:10]), 0, 0)).total_seconds() / (SECS_IN_5MIN)), \\\n",
     "                    epoch_time, \\\n",
     "                    int(row[6]), \\\n",
     "                    float(\"{:.3f}\".format(float(row[6]) / float(row[4]))))\n",
     "            except IndexError as e:\n",
-    "                print(\"\\nTRIED: \", epoch_time, ' / ', DATAPOINTS_PER_DAY, ' = ', int(epoch_time / (DATAPOINTS_PER_DAY - 1)))\n",
+    "                print(\"\\nTRIED: \", epoch_time, ' / ', DATAPOINTS_PER_DAY, ' = ', int(epoch_time / DATAPOINTS_PER_DAY))\n",
     "                print(row[1])\n",
     "    except csv.Error as e:\n",
     "        sys.exit('file {}, line {}: {}'.format(filename, reader.line_num, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "            \n",
+    "for station_i, station in enumerate(stations):\n",
+    "    last_bikes= 0\n",
+    "    last_percent_bikes= 0\n",
+    "    for day_i, data_day in enumerate(station.data_days):\n",
+    "        for val_i, val in enumerate(data_day.bikes):\n",
+    "            if val == EMPTY_DATA_DAY_VAL:\n",
+    "                stations[station_i].data_days[day_i].populate(val_i, day_i * DATAPOINTS_PER_DAY + val_i, last_bikes, last_percent_bikes)\n",
+    "            else:\n",
+    "                last_bikes= data_day.bikes[val_i]\n",
+    "                last_percent_bikes= data_day.percent_bikes[val_i]"
    ]
   },
   {
@@ -148,14 +172,14 @@
    "source": [
     "# FEATURE DATA PREPERATION\n",
     "\n",
-    "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "fullness_in10= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "fullness_in30= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "fullness_in60= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
-    "fullness_percent= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.float)\n",
-    "bikes_changes_pastx= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS), int(MAX_HINDSIGHT / DATAPOINT_EVERYX_MIN)), DUD_VALUE, dtype=np.int)\n",
-    "day_of_week= np.full((MAX_TIME, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
-    "hour_of_day= np.full((MAX_TIME, HOURS), DUD_VALUE, dtype=np.float)\n",
+    "fullness= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in10= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in30= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in60= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_percent= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.float)\n",
+    "bikes_changes_pastx= np.full((TOTAL_TIME_DATAPOINTS, MAX_STATION_ID - len(MISSING_STATIONS), int(MAX_HINDSIGHT / DATAPOINT_EVERYX_MIN)), DUD_VALUE, dtype=np.int)\n",
+    "day_of_week= np.full((TOTAL_TIME_DATAPOINTS, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
+    "hour_of_day= np.full((TOTAL_TIME_DATAPOINTS, HOURS), DUD_VALUE, dtype=np.float)\n",
     "\n",
     "station_index_decrement= 1 # this is a varying offset for the indexing of stations that accounts for missing stations that are being ignored\n",
     "for epoch_day_i in range(TOTAL_DAYS):\n",
@@ -166,7 +190,7 @@
     "    block= np.zeros((DATAPOINTS_PER_DAY, HOURS), dtype=np.float)\n",
     "    daily_epoch_time= list(range(DATAPOINTS_PER_DAY))\n",
     "    for time_i in daily_epoch_time:\n",
-    "        hour= float(\"{:.3f}\".format(time_i / 12))\n",
+    "        hour= float(\"{:.3f}\".format(time_i / 12)) # divide by 12 because there are 12 datapoints in an hour\n",
     "        block[time_i][(int(hour) + 1) % HOURS]= hour % 1\n",
     "        block[time_i][int(hour)]= 1 - (hour % 1)\n",
     "    hour_of_day[x_offset:x_offset + block.shape[0], y_offset:y_offset + block.shape[1]]= block\n",
@@ -230,27 +254,27 @@
     "def run_approach1(station_name):\n",
     "    index= get_station_id(station_name)\n",
     "    \n",
-    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int) # change the 3 to a 6 to do both stations at once on the generalised-training form of an approach\n",
-    "    y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
-    "    y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
-    "    y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
-    "    #y[0:MAX_TIME, 3:4]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "    #y[0:MAX_TIME, 4:5]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
-    "    #y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "    y= np.full((TOTAL_TIME_DATAPOINTS, 3), 0, dtype=np.int) # change the 3 to a 6 to do both stations at once on the generalised-training form of an approach\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 0:1]= np.reshape(fullness_in10[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 1:2]= np.reshape(fullness_in30[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 2:3]= np.reshape(fullness_in60[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    #y[0:TOTAL_TIME_DATAPOINTS, 3:4]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    #y[0:TOTAL_TIME_DATAPOINTS, 4:5]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    #y[0:TOTAL_TIME_DATAPOINTS, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (TOTAL_TIME_DATAPOINTS, 1))\n",
     "\n",
-    "    X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4 \\\n",
+    "    X= np.full((TOTAL_TIME_DATAPOINTS, hour_of_day.shape[1] + day_of_week.shape[1] + 4 \\\n",
     "                #* bikes_changes_past5.shape[1] \\\n",
     "               ), 0, dtype=np.float)\n",
-    "    X[0:MAX_TIME, 0:7]= day_of_week\n",
-    "    X[0:MAX_TIME, 7:31]= hour_of_day\n",
-    "    X[0:MAX_TIME, 31:32]= fullness_percent[0:MAX_TIME, index:index+1]\n",
-    "    X[0:MAX_TIME, 32:33]= bikes_changes_pastx[0:MAX_TIME, index:index+1, 0:1] # past5\n",
-    "    X[0:MAX_TIME, 33:34]= bikes_changes_pastx[0:MAX_TIME, index:index+1, 2:3] # past15\n",
-    "    X[0:MAX_TIME, 34:35]= bikes_changes_pastx[0:MAX_TIME, index:index+1, 8:9] # past45\n",
-    "    # X[0:MAX_TIME, 31:139]= fullness_percent\n",
-    "    # X[0:MAX_TIME, 139:247]= bikes_changes_past5\n",
-    "    # X[0:MAX_TIME, 247:355]= bikes_changes_past15\n",
-    "    # X[0:MAX_TIME, 355:463]= bikes_changes_past45\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 0:7]= day_of_week\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 7:31]= hour_of_day\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 31:32]= fullness_percent[0:TOTAL_TIME_DATAPOINTS, index:index+1]\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 32:33]= bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 0:1] # past5\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 33:34]= bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 2:3] # past15\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 34:35]= bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 8:9] # past45\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 31:139]= fullness_percent\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 139:247]= bikes_changes_past5\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 247:355]= bikes_changes_past15\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 355:463]= bikes_changes_past45\n",
     "\n",
     "\n",
     "    kf= KFold(n_splits= K)\n",
@@ -274,7 +298,7 @@
     "    # print(scores)\n",
     "    \n",
     "def run_approach2(station_name):\n",
-    "    X= np.full((MAX_TIME, 2 + 3 \\\n",
+    "    X= np.full((TOTAL_TIME_DATAPOINTS, 2 + 3 \\\n",
     "            #* bikes_changes_past5.shape[1] \\\n",
     "           ), -1, dtype=np.float)\n",
     "    \n",
@@ -283,24 +307,24 @@
     "        positions.append((1 - (R * math.cos(t) + R), R * math.sin(t) + R))\n",
     "        t+= STEP_SIZE\n",
     "    pos_i= 0\n",
-    "    for time_i in range(MAX_TIME):\n",
+    "    for time_i in range(TOTAL_TIME_DATAPOINTS):\n",
     "        X[time_i, 0]= positions[pos_i][0]\n",
     "        X[time_i, 1]= positions[pos_i][1]\n",
     "        pos_i= (pos_i + 1) % len(positions)\n",
     "    \n",
     "    index= get_station_id(station_name)\n",
     "    np.reshape\n",
-    "    X[0:MAX_TIME, 2:3]= np.reshape((bikes_changes_pastx[0:MAX_TIME, index:index+1, 0:1]), (MAX_TIME, 1)) # past5\n",
-    "    X[0:MAX_TIME, 3:4]= np.reshape((bikes_changes_pastx[0:MAX_TIME, index:index+1, 2:3]), (MAX_TIME, 1)) # past15\n",
-    "    X[0:MAX_TIME, 4:5]= np.reshape((bikes_changes_pastx[0:MAX_TIME, index:index+1, 8:9]), (MAX_TIME, 1)) # past45\n",
-    "    # X[0:MAX_TIME, 2:110]= bikes_changes_past5\n",
-    "    # X[0:MAX_TIME, 110:218]= bikes_changes_past15\n",
-    "    # X[0:MAX_TIME, 218:326]= fullness_percent\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 2:3]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 0:1]), (TOTAL_TIME_DATAPOINTS, 1)) # past5\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 3:4]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 2:3]), (TOTAL_TIME_DATAPOINTS, 1)) # past15\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 4:5]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 8:9]), (TOTAL_TIME_DATAPOINTS, 1)) # past45\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 2:110]= bikes_changes_past5\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 110:218]= bikes_changes_past15\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 218:326]= fullness_percent\n",
     "    \n",
-    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
-    "    y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
-    "    y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
-    "    y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
+    "    y= np.full((TOTAL_TIME_DATAPOINTS, 3), 0, dtype=np.int)\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 0:1]= np.reshape(fullness_in10[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 1:2]= np.reshape(fullness_in30[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
+    "    y[0:TOTAL_TIME_DATAPOINTS, 2:3]= np.reshape(fullness_in60[:,index], (TOTAL_TIME_DATAPOINTS, 1))\n",
     "    \n",
     "    neigh= KNeighborsRegressor(n_neighbors= 30, weights='distance')\n",
     "    cv_scores= cross_val_score(neigh, X, y, cv=5)\n",
