no joy tweak MLPReg parameters

--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "DAYS_OF_WEEK= ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'] # yes, I consider Monday to be the '0'/start of the week\n",
     "STARTING_DATE= 0 # aka Monday. Because the 27th of Jan 2020 is a Monday\n",
     "MISSING_STATIONS= [117, 116, 70, 60, 46, 35, 20, 14, 1, 0]\n",
+    "NUM_STATIONS= MAX_STATION_ID - len(MISSING_STATIONS)\n",
     "SUBSTANDARD_DAYS= [] # [50, 49]\n",
     "TOTAL_DAYS= 66 # from 27 / 1 / 2020 to (and including) 1 / 4 / 2020\n",
     "HOURS= 24\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,24 +263,20 @@
     "    #y[0:TOTAL_TIME_DATAPOINTS, 4:5]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (TOTAL_TIME_DATAPOINTS, 1))\n",
     "    #y[0:TOTAL_TIME_DATAPOINTS, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (TOTAL_TIME_DATAPOINTS, 1))\n",
     "\n",
-    "    X= np.full((TOTAL_TIME_DATAPOINTS, hour_of_day.shape[1] + day_of_week.shape[1] + 4 \\\n",
-    "                #* bikes_changes_past5.shape[1] \\ # This line is uncommented when training on all stations\n",
+    "    X= np.full((TOTAL_TIME_DATAPOINTS, hour_of_day.shape[1] + day_of_week.shape[1] + 3 \\\n",
+    "                + 0 * NUM_STATIONS \\\n",
     "               ), 0, dtype=np.float)\n",
     "    X[0:TOTAL_TIME_DATAPOINTS, 0:7]= day_of_week\n",
     "    X[0:TOTAL_TIME_DATAPOINTS, 7:31]= hour_of_day\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 31:32]= fullness_percent[0:TOTAL_TIME_DATAPOINTS, index:index+1]\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 32:33]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 0:1]), (TOTAL_TIME_DATAPOINTS, 1)) # past5\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 33:34]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 1:2]), (TOTAL_TIME_DATAPOINTS, 1)) # past10\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 34:35]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 2:3]), (TOTAL_TIME_DATAPOINTS, 1)) # past15\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 35:36]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 3:4]), (TOTAL_TIME_DATAPOINTS, 1)) # past20\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 36:37]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 4:5]), (TOTAL_TIME_DATAPOINTS, 1)) # past25\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 37:38]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 5:6]), (TOTAL_TIME_DATAPOINTS, 1)) # past30\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 38:39]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 6:7]), (TOTAL_TIME_DATAPOINTS, 1)) # past35\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 39:40]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 7:8]), (TOTAL_TIME_DATAPOINTS, 1)) # past40\n",
-    "    X[0:TOTAL_TIME_DATAPOINTS, 40:41]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 8:9]), (TOTAL_TIME_DATAPOINTS, 1)) # past45\n",
-    "    # X[0:TOTAL_TIME_DATAPOINTS, 139:247]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:108, 0:1]), (TOTAL_TIME_DATAPOINTS, 1)) # past5\n",
-    "    # X[0:TOTAL_TIME_DATAPOINTS, 247:355]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:108, 2:3]), (TOTAL_TIME_DATAPOINTS, 1)) # past15\n",
-    "    # X[0:TOTAL_TIME_DATAPOINTS, 355:463]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:108, 8:9]), (TOTAL_TIME_DATAPOINTS, 1)) # past45\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 31:32]= fullness_percent[0:TOTAL_TIME_DATAPOINTS, index:index + 1]\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 32:33]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index + 1, 0:1]), (TOTAL_TIME_DATAPOINTS, 1)) # past5\n",
+    "    X[0:TOTAL_TIME_DATAPOINTS, 33:34]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index + 1, 1:2]), (TOTAL_TIME_DATAPOINTS, 1)) # past10\n",
+    "    #X[0:TOTAL_TIME_DATAPOINTS, 34:35]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 2:3]), (TOTAL_TIME_DATAPOINTS, 1)) # past15\n",
+    "    #X[0:TOTAL_TIME_DATAPOINTS, 35:36]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 3:4]), (TOTAL_TIME_DATAPOINTS, 1)) # past20\n",
+    "    #X[0:TOTAL_TIME_DATAPOINTS, 36:37]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, index:index+1, 4:5]), (TOTAL_TIME_DATAPOINTS, 1)) # past25\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 139:247]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:NUM_STATIONS, 0:1]), (TOTAL_TIME_DATAPOINTS, 1)) # past5\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 247:355]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:NUM_STATIONS, 2:3]), (TOTAL_TIME_DATAPOINTS, 1)) # past15\n",
+    "    # X[0:TOTAL_TIME_DATAPOINTS, 355:463]= np.reshape((bikes_changes_pastx[0:TOTAL_TIME_DATAPOINTS, 0:NUM_STATIONS, 8:9]), (TOTAL_TIME_DATAPOINTS, 1)) # past45\n",
     "\n",
     "\n",
     "    kf= KFold(n_splits= K)\n",
@@ -289,7 +286,7 @@
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train, X_test= X[train_index], X[test_index]\n",
     "        y_train, y_test= y[train_index], y[test_index]\n",
-    "        regr= MLPRegressor(random_state= 1, max_iter= 1000).fit(X_train, y_train)\n",
+    "        regr= MLPRegressor(random_state= 1, max_iter= 1000, alpha=0.001).fit(X_train, y_train)\n",
     "        y_pred= regr.predict(X_test)\n",
     "        score_sum+= regr.score(X_test, y_test)\n",
     "        print(\"Data split \", i, \" accuracy: \", regr.score(X_test, y_test) * 100, \" %\")\n",
@@ -338,27 +335,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data split  1  accuracy:  91.64886553020851  %\n",
-      "Data split  2  accuracy:  94.40287674198967  %\n",
-      "Data split  3  accuracy:  92.33281987086791  %\n",
-      "Data split  4  accuracy:  91.55197139656927  %\n",
-      "Data split  5  accuracy:  80.40513056001019  %\n",
+      "Data split  1  accuracy:  91.53659648301954  %\n",
+      "Data split  2  accuracy:  94.50515754541566  %\n",
+      "Data split  3  accuracy:  92.40826363602679  %\n",
+      "Data split  4  accuracy:  91.54074488287787  %\n",
+      "Data split  5  accuracy:  78.69800754259569  %\n",
       "\n",
-      "Average accuracy of model:  90.06833281992911  %\n",
-      "Data split  1  accuracy:  80.45365224212863  %\n",
-      "Data split  2  accuracy:  80.47249736567701  %\n",
-      "Data split  3  accuracy:  82.51613544284008  %\n",
-      "Data split  4  accuracy:  84.54180803059769  %\n",
-      "Data split  5  accuracy:  71.21946538891957  %\n",
+      "Average accuracy of model:  89.73775401798711  %\n",
+      "--------------------\n",
+      "Data split  1  accuracy:  80.62748020947348  %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n",
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data split  2  accuracy:  81.8641055935005  %\n",
+      "Data split  3  accuracy:  -62.835109241543165  %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data split  4  accuracy:  84.35247064027406  %\n",
+      "Data split  5  accuracy:  14.280107156922787  %\n",
       "\n",
-      "Average accuracy of model:  79.8407116940326  %\n"
+      "Average accuracy of model:  39.65781087172554  %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
      ]
     }
    ],
@@ -366,6 +404,7 @@
     "# DRIVER\n",
     "\n",
     "run_approach1(\"PORTOBELLO ROAD\")\n",
+    "print(\"--------------------\")\n",
     "run_approach1(\"CUSTOM HOUSE QUAY\")"
    ]
   },
