--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "from sklearn import linear_model\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "DUD_VALUE= 0 # change from 0 to something like 123 for debugging\n",
     "EMPTY_DATA_DAY_VAL= 123456789\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,52 +337,49 @@
     "\n",
     "def run_baseline(station_name):\n",
     "    index= get_station_id(station_name)\n",
-    "    polynomial_features= PolynomialFeatures(degree= 20)\n",
     "    max_train_time= DATAPOINTS_PER_DAY * DAYS_PER_WEEKDAY * len(DAYS_OF_WEEK)\n",
-    "    X_test= fullness[max_train_time:TOTAL_TIME_DATAPOINTS, index:index+1]\n",
-    "    print(\"X_test.shape:\", X_test.shape)\n",
-    "    y_test= np.arange(max_train_time, TOTAL_TIME_DATAPOINTS, dtype=np.int)\n",
-    "    print(\"y_test.shape:\", y_test.shape)\n",
-    "    poly_X_test= polynomial_features.fit_transform(X_test, y_test)\n",
-    "    print(\"poly_X_test.shape:\", poly_X_test.shape)\n",
-    "    \n",
-    "    models= []\n",
-    "    for day_of_week_i in range(len(DAYS_OF_WEEK)):\n",
-    "        X_train= np.reshape((average_weekday_fullness[0:DATAPOINTS_PER_DAY, index:index+1, day_of_week_i:day_of_week_i+1]), (DATAPOINTS_PER_DAY, 1))\n",
-    "        print(\"X_train.shape:\", X_train.shape)\n",
-    "        y_train= np.arange(0, DATAPOINTS_PER_DAY, dtype=np.int)\n",
-    "        print(\"y_train.shape:\", y_train.shape)\n",
-    "        poly_X_train= polynomial_features.fit_transform(X_train, y_train)\n",
-    "        print(\"poly_X_train.shape:\", poly_X_train.shape)\n",
-    "        regr= linear_model.LinearRegression().fit(poly_X_train, y_train)\n",
-    "        models.append(regr)\n",
-    "    \n",
-    "    y_pred= np.zeros(X_test.shape[0], dtype=np.float)\n",
-    "    for val_i in range(X_test.shape[0]):\n",
-    "        day_of_week= ((STARTING_DATE + int(val_i / DATAPOINTS_PER_DAY)) % len(DAYS_OF_WEEK))\n",
-    "        x= np.reshape(poly_X_test[val_i], (1, 21))\n",
-    "        y_pred[val_i]= models[day_of_week].predict(x)\n",
-    "    X_test= np.reshape(X_test, X_test.shape[0])\n",
-    "    for val_i in range(y_pred.shape[0]):\n",
-    "        print(\"X_test:\",X_test[val_i],\" y_pred:\",y_pred[val_i])\n",
-    "    \n",
+    "    y_test= np.reshape(fullness[max_train_time:TOTAL_TIME_DATAPOINTS, index:index+1], TOTAL_TIME_DATAPOINTS - max_train_time)\n",
+    "    y_pred= np.zeros(TOTAL_TIME_DATAPOINTS - max_train_time)\n",
+    "    for i in range(int((TOTAL_TIME_DATAPOINTS - max_train_time) / DATAPOINTS_PER_DAY)):\n",
+    "        datapoint_i= i * DATAPOINTS_PER_DAY\n",
+    "        day_of_week_i= int((max_train_time + datapoint_i) / DATAPOINTS_PER_DAY) % len(DAYS_OF_WEEK)\n",
+    "        y_pred[datapoint_i:datapoint_i + DATAPOINTS_PER_DAY]= np.reshape(average_weekday_fullness[0:DATAPOINTS_PER_DAY, index:index+1, day_of_week_i:day_of_week_i+1], DATAPOINTS_PER_DAY)\n",
+    "#     for val_i in range(y_pred.shape[0]):\n",
+    "#         print(\"y_test:\",y_test[val_i],\" y_pred:\",y_pred[val_i])\n",
     "    print(\"R**2 accuracy: \", r2_score(y_test, y_pred) * 100, \" %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R**2 accuracy:  -49.28025517315695  %\n",
+      "--------------------\n",
+      "R**2 accuracy:  -9.470226044167962  %\n"
+     ]
+    }
+   ],
    "source": [
     "# DRIVER\n",
     "\n",
     "run_baseline(\"PORTOBELLO ROAD\")\n",
     "print(\"--------------------\")\n",
-    "#run_baseline(\"CUSTOM HOUSE QUAY\")"
+    "run_baseline(\"CUSTOM HOUSE QUAY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
